--- a/notebooks/draft.ipynb
+++ b/notebooks/draft.ipynb
@@ -197,6 +197,10 @@
    "execution_count": 4,
    "id": "72994eb5-583b-4220-acc4-f8b95785c62a",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -451,6 +455,14 @@
     "out = vae.encode(x)\n",
     "out.latent_dist.sample().shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e1a559c-e4dc-48b1-a50f-ea314c498563",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
