--- a/notebooks/maskv2_test.ipynb
+++ b/notebooks/maskv2_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "ca9b9fe8-1439-4d41-9687-ef69ec20f85c",
    "metadata": {
     "tags": []
@@ -54,10 +54,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "\u001b[1;31m2024-12-03 09:39:11.299263385 [E:onnxruntime:Default, provider_bridge_ort.cc:1992 TryGetProviderInfo_CUDA] /onnxruntime_src/onnxruntime/core/session/provider_bridge_ort.cc:1637 onnxruntime::Provider& onnxruntime::ProviderLibrary::Get() [ONNXRuntimeError] : 1 : FAIL : Failed to load library libonnxruntime_providers_cuda.so with error: libcublasLt.so.12: cannot open shared object file: No such file or directory\n",
+      "\u001b[m\n",
+      "\u001b[0;93m2024-12-03 09:39:11.299319562 [W:onnxruntime:Default, onnxruntime_pybind_state.cc:965 CreateExecutionProviderInstance] Failed to create CUDAExecutionProvider. Require cuDNN 9.* and CUDA 12.*. Please install all dependencies as mentioned in the GPU requirements page (https://onnxruntime.ai/docs/execution-providers/CUDA-ExecutionProvider.html#requirements), make sure they're in the PATH, and that your GPU is supported.\u001b[m\n",
+      "\u001b[1;31m2024-12-03 09:39:11.998693134 [E:onnxruntime:Default, provider_bridge_ort.cc:1992 TryGetProviderInfo_CUDA] /onnxruntime_src/onnxruntime/core/session/provider_bridge_ort.cc:1637 onnxruntime::Provider& onnxruntime::ProviderLibrary::Get() [ONNXRuntimeError] : 1 : FAIL : Failed to load library libonnxruntime_providers_cuda.so with error: libcublasLt.so.12: cannot open shared object file: No such file or directory\n",
+      "\u001b[m\n",
+      "\u001b[0;93m2024-12-03 09:39:11.998711663 [W:onnxruntime:Default, onnxruntime_pybind_state.cc:965 CreateExecutionProviderInstance] Failed to create CUDAExecutionProvider. Require cuDNN 9.* and CUDA 12.*. Please install all dependencies as mentioned in the GPU requirements page (https://onnxruntime.ai/docs/execution-providers/CUDA-ExecutionProvider.html#requirements), make sure they're in the PATH, and that your GPU is supported.\u001b[m\n",
       "/home/jupyter/H-engine/src/preprocess/openpose/annotator/openpose/body.py:26: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  model_dict = util.transfer(self.model, torch.load(model_path))\n",
-      "100%|██████████| 1/1 [00:00<00:00,  2.06it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.26it/s]\n"
+      "100%|██████████| 1/1 [00:01<00:00,  1.23s/it]\n",
+      "100%|██████████| 1/1 [00:01<00:00,  1.26s/it]\n"
      ]
     },
     {
@@ -81,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "458037ef-d676-4033-b054-b28eb46a2c49",
    "metadata": {
     "tags": []
@@ -95,7 +101,7 @@
        "<PIL.Image.Image image mode=RGB size=384x512>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,19 +114,27 @@
     "out = np.where(mask_np, np.ones_like(mask_np) * 127, img_np)\n",
     "Image.fromarray(out)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f7933b9-1c58-406f-a557-4fa9742bf12b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "environment": {
-   "kernel": ".venv38",
+   "kernel": ".venv",
    "name": "workbench-notebooks.m125",
    "type": "gcloud",
    "uri": "us-docker.pkg.dev/deeplearning-platform-release/gcr.io/workbench-notebooks:m125"
   },
   "kernelspec": {
-   "display_name": "venv38",
+   "display_name": "venv-legacy",
    "language": "python",
-   "name": ".venv38"
+   "name": ".venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -132,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
