update vitonhd notebook

--- a/notebooks/vitonhd.ipynb
+++ b/notebooks/vitonhd.ipynb
@@ -16,6 +16,7 @@
     "from torchvision.transforms import Grayscale\n",
     "from torchvision.transforms.functional import to_pil_image\n",
     "import torch\n",
+    "import numpy as np\n",
     "from src.dataset.vitonhd import VITONHDDataset\n",
     "from src.utils import get_project_root\n",
     "\n",
@@ -40,8 +41,64 @@
    ],
    "source": [
     "data_path = os.path.join(PROJECT_ROOT_PATH, 'datasets', 'vitonhd')\n",
-    "dataset = VITONHDDataset(data_path, use_trainset=True)\n",
+    "dataset = VITONHDDataset(data_path, use_trainset=True, use_dilated_relaxed_mask=True)\n",
     "len(dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image: torch.Size([3, 1024, 768])\n",
+      "masked_image: torch.Size([3, 1024, 768])\n",
+      "mask: torch.Size([1, 1024, 768])\n",
+      "densepose: torch.Size([3, 1024, 768])\n",
+      "cloth_raw: torch.Size([3, 1024, 768])\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample = dataset[0]\n",
+    "for k, v in sample.items():\n",
+    "    if isinstance(v, torch.Tensor):\n",
+    "        print(f'{k}: {v.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 1024, 768])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = dataset[0]['mask']\n",
+    "mask.shape"
    ]
   },
   {
@@ -154,27 +211,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def show(img: Union[torch.Tensor, PIL.Image.Image], print_shape: bool = False):\n",
-    "    if isinstance(img, PIL.Image.Image):\n",
-    "        img = pil_to_tensor(img)\n",
-    "\n",
-    "    if img.ndim == 3:\n",
-    "        img = rearrange(img, 'c h w -> h w c')\n",
-    "    else:\n",
-    "        raise ValueError('Only support for RGB image for now.')\n",
-    "\n",
-    "    if print_shape:\n",
-    "        print(img.shape)\n",
-    "\n",
-    "    plt.imshow(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -191,6 +227,36 @@
    ],
    "source": [
     "rand_sample['im_name']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Show"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show(img: Union[torch.Tensor, PIL.Image.Image], print_shape: bool = False):\n",
+    "    if isinstance(img, PIL.Image.Image):\n",
+    "        img = pil_to_tensor(img)\n",
+    "\n",
+    "    if img.ndim == 3:\n",
+    "        img = rearrange(img, 'c h w -> h w c')\n",
+    "    else:\n",
+    "        raise ValueError('Only support for RGB image for now.')\n",
+    "\n",
+    "    if print_shape:\n",
+    "        print(img.shape)\n",
+    "\n",
+    "    plt.imshow(img)"
    ]
   },
   {
@@ -433,15 +499,15 @@
  ],
  "metadata": {
   "environment": {
-   "kernel": ".venv38",
+   "kernel": ".venv",
    "name": "workbench-notebooks.m125",
    "type": "gcloud",
    "uri": "us-docker.pkg.dev/deeplearning-platform-release/gcr.io/workbench-notebooks:m125"
   },
   "kernelspec": {
-   "display_name": "venv38",
+   "display_name": "venv-latest",
    "language": "python",
-   "name": ".venv38"
+   "name": ".venv"
   },
   "language_info": {
    "codemirror_mode": {
