--- a/notebooks/dresscode.ipynb
+++ b/notebooks/dresscode.ipynb
@@ -349,6 +349,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "cb70353f-d09e-4e7e-8f30-b4c6a4617e6e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image: torch.Size([3, 512, 384])\n",
+      "masked_image: torch.Size([3, 512, 384])\n",
+      "mask: torch.Size([1, 512, 384])\n",
+      "densepose: torch.Size([3, 512, 384])\n",
+      "cloth_raw: torch.Size([3, 512, 384])\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample = dataset[0]\n",
+    "for k, v in sample.items():\n",
+    "    if isinstance(v, torch.Tensor):\n",
+    "        print(f'{k}: {v.shape}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "93d31504-4876-460b-962f-0965978104e5",
    "metadata": {
