--- a/notebooks/dresscode.ipynb
+++ b/notebooks/dresscode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "9bae81dd-4bd2-4093-9199-ebeac2c9407b",
    "metadata": {
     "tags": []
@@ -320,9 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "f72b76b3-bfc1-41f5-92f1-457d1b8d5dda",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -333,7 +335,7 @@
     }
    ],
    "source": [
-    "dataroot_path = osp.join('/hosjiu/data/DressCode/')\n",
+    "dataroot_path = osp.join('../datasets/dresscode/')\n",
     "\n",
     "w, h = (384, 512)\n",
     "phase = 'test'\n",
@@ -345,6 +347,30 @@
     "    use_dilated_relaxed_mask=True)\n",
     "\n",
     "print(f'Dataset Size ({phase}): {len(dataset)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "714efe13-8b5a-42f4-987d-ad44cad0b338",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img = dataset.get_random_image()\n",
+    "img.size == img.size"
    ]
   },
   {
@@ -410,7 +436,7 @@
    "uri": "us-docker.pkg.dev/deeplearning-platform-release/gcr.io/workbench-notebooks:m125"
   },
   "kernelspec": {
-   "display_name": "venv-latest",
+   "display_name": "venv (Local)",
    "language": "python",
    "name": ".venv"
   },
