--- a/notebooks/__wild_spacat_outfits_vs_persons.ipynb
+++ b/notebooks/__wild_spacat_outfits_vs_persons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -104,7 +104,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cdbc9f9519cb411c8626652a9d09a8ab",
+       "model_id": "94a87e26e3504049a6800d725eb9f2cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -118,12 +118,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52f469e1782f4c1ba418c9e098a39cc7",
+       "model_id": "8bb26294abb24771a8a6740e3a1dc7b2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "(…)1-beta-1512/ckpt-300000/unet/config.json:   0%|          | 0.00/1.85k [00:00<?, ?B/s]"
+       "(…)ckpt-20000-1512-preview/unet/config.json:   0%|          | 0.00/1.85k [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -132,7 +132,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "741b5f67991d489e8dd49009135921f4",
+       "model_id": "e135abe322e64842be8cea6b62155fc6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -146,12 +146,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb32cdffe2de401f8706d66c31bab2fb",
+       "model_id": "d08f52d14b604639ae5d00f4187e6803",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "(…)-1-beta-1512/ckpt-300000/vae/config.json:   0%|          | 0.00/820 [00:00<?, ?B/s]"
+       "(…)/ckpt-20000-1512-preview/vae/config.json:   0%|          | 0.00/820 [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -160,12 +160,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c052eeac379645fb8a5f23e25aafc754",
+       "model_id": "fd386edcd35940c5a5c56031c4f86c76",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "(…)t-300000/scheduler/scheduler_config.json:   0%|          | 0.00/562 [00:00<?, ?B/s]"
+       "(…)-preview/scheduler/scheduler_config.json:   0%|          | 0.00/562 [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -174,12 +174,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc63363962ce4233b392d78e094da71a",
+       "model_id": "e4d17e44864246f492b586f222c7da3e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "(…)1-beta-1512/ckpt-300000/model_index.json:   0%|          | 0.00/548 [00:00<?, ?B/s]"
+       "(…)ckpt-20000-1512-preview/model_index.json:   0%|          | 0.00/548 [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -188,10 +188,10 @@
     {
      "data": {
       "text/plain": [
-       "'/home/jupyter/H-engine/checkpoints/navier-1/navier-1-beta-1512/ckpt-300000'"
+       "'/home/jupyter/H-engine/checkpoints/navier-1/navier-1-beta-1512-preview/ckpt-20000-1512-preview'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,8 +201,8 @@
     "\"\"\"\n",
     "PROJECT_ROOT_PATH = get_project_root()\n",
     "repo_id = 'bui/Navier-1'\n",
-    "model_name = 'navier-1-beta-1512'\n",
-    "ckpt_name = 'ckpt-300000'\n",
+    "model_name = 'navier-1-beta-1512-preview'\n",
+    "ckpt_name = 'ckpt-20000-1512-preview'\n",
     "base_folder = os.path.join(model_name, ckpt_name)\n",
     "\n",
     "# unet\n",
@@ -671,7 +671,7 @@
    "uri": "us-docker.pkg.dev/deeplearning-platform-release/gcr.io/workbench-notebooks:m125"
   },
   "kernelspec": {
-   "display_name": "venv-latest",
+   "display_name": "venv (Local)",
    "language": "python",
    "name": ".venv"
   },
