--- a/notebooks/dresscode.ipynb
+++ b/notebooks/dresscode.ipynb
@@ -31,7 +31,7 @@
    },
    "outputs": [],
    "source": [
-    "def mask2agn(mask: np.array) -> Image.Image:\n",
+    "def mask2agn(mask: np.array, body: Image.Image) -> Image.Image:\n",
     "    mask = torch.from_numpy(mask)\n",
     "    body_tensor = pil_to_tensor(body)\n",
     "    agnostic_tensor = torch.where(mask, torch.ones_like(body_tensor) * 127, body_tensor)\n",
